# tinyrust

./: .ocamlformat  .ocamlinit  NOTES.md  README.md  dune  dune-project  tinyrust.opam
lib/: ast.ml  dune  errors.ml  main.ml  parser.ml  prettyprint.ml  prim.ml  state.ml  tiny_lexer.mll  tiny_parser.mly  trace.ml  types.ml  utils.ml
test/: 1.rs  common.ml  dune  test_parser.ml  test_trace.lip  test_trace.ml  test_trace_lip.ml
test/examples/: 02-intError.rs  06-scopeOk.rs  07-scopeError.rs  1-print.rs  10-ite.rs  15-borrowError.rs  19-loopBreak.rs  20-loopNested.rs  21-funExpr.rs  22-funExpr.rs  23-scopeCheck.rs  24-borrowOk.rs  25-borrowError.rs  25.rs  26-borrowError.rs  26.rs  27-borrowError.rs  27-doubleRef.rs  27.rs  28-borrowError.rs  28.rs  29-toplevelFn.rs  29.rs  30-assignMoves.rs  31-assignNewString.rs  32-multipleArgs.rs  32.rs  33-borrowError.rs  34-returnMoves.rs  35-returnMoves.rs  36-dropError.rs  37-borrowError.rs  38-ownership.rs
