(ocamllex
 (modules tiny_lexer))

(menhir
 (modules tiny_parser))

(library
 (name tinyrustLib)
 (inline_tests)
 (libraries nice_parser re ANSITerminal)
 (preprocess
  (pps ppx_inline_test ppx_expect ppx_deriving.show visitors.ppx ppx_variants_conv ppx_fields_conv)))

(env
 (dev
  (flags (-w ""))
 )
)